Kubernetes/realip/realip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: realip-service
  namespace: aera
spec:
  selector:
    app: realip
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
