Kubernetes/realip/realip-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: realip-ingress
  namespace: aera
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: realip-service
            port:
              number: 80
  # - host: "*"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: realip-service
  #           port:
  #             number: 80
